[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/github-integration/scripts/GitHub.gd" type="Script" id=1]
[ext_resource path="res://addons/github-integration/resources/themes/GitHubTheme-Dark.tres" type="Theme" id=2]
[ext_resource path="res://addons/github-integration/scenes/loading.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/github-integration/scenes/Header.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/github-integration/scenes/Commit.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/github-integration/scenes/SingIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/github-integration/scenes/UserPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/github-integration/scenes/Repo.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/github-integration/scenes/Gist.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/github-integration/scenes/Notifications.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/github-integration/scenes/RestHandler.gd" type="Script" id=11]
[ext_resource path="res://addons/github-integration/scenes/UserData.gd" type="Script" id=12]
[ext_resource path="res://addons/github-integration/scenes/PluginSettings.gd" type="Script" id=13]
[ext_resource path="res://scenes/UI & misc/ingame_menu.tscn" type="PackedScene" id=15]

[node name="GitHub" type="Control" groups=["github"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "1. fixed bug that was resetting the editor mode to light
2. refactoring
3. code style revisited"
}
plugin_version = "131"

[node name="VersionCheck" type="HTTPRequest" parent="."]

[node name="SingIn" parent="." instance=ExtResource( 6 )]
margin_top = 48.0
rect_clip_content = true

[node name="UserPanel" parent="." instance=ExtResource( 7 )]
visible = false
margin_top = 48.0
rect_clip_content = true

[node name="Repo" parent="." instance=ExtResource( 8 )]
visible = false
margin_top = 48.0

[node name="Commit" parent="." instance=ExtResource( 5 )]
visible = false
margin_top = 48.0
rect_clip_content = true

[node name="Gist" parent="." instance=ExtResource( 9 )]
margin_top = 48.0
rect_clip_content = true
theme = ExtResource( 2 )

[node name="Notifications" parent="." instance=ExtResource( 10 )]
visible = false
theme = ExtResource( 2 )

[node name="Header" parent="." instance=ExtResource( 4 )]
anchor_bottom = 0.0
margin_bottom = 48.0
rect_clip_content = true
github_link = "https://github.com/sam2much96/Dystopia"

[node name="loading" parent="." instance=ExtResource( 3 )]
visible = false
margin_top = 48.0
color = Color( 0, 0, 0, 0.627451 )

[node name="UserData" type="Node" parent="." groups=["github_user_data"]]
script = ExtResource( 12 )

[node name="RestHandler" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Client" type="HTTPRequest" parent="RestHandler"]

[node name="NotificationsClient" type="HTTPRequest" parent="RestHandler"]

[node name="PluginSettings" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Menu " parent="." instance=ExtResource( 15 )]
visible = false
